[gd_scene load_steps=6 format=3 uid="uid://tdve2p2ratdd"]

[ext_resource type="Script" path="res://damage.gd" id="1_xn5bd"]

[sub_resource type="InputEventKey" id="InputEventKey_tiskw"]
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_k3dni"]
events = [SubResource("InputEventKey_tiskw")]

[sub_resource type="InputEventKey" id="InputEventKey_4htdr"]
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_pppw0"]
events = [SubResource("InputEventKey_4htdr")]

[node name="Damage" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xn5bd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer"]
modulate = Color(1.5, 1.5, 1.5, 1)
layout_mode = 2
text = "ROBCO INDUSTRIES UNIFIED OPERATING SYSTEM
COPYRIGHT 2075-2077 ROBCO INDUSTRIES
-Server 13-
"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
modulate = Color(1.5, 1.5, 1.5, 1)
layout_mode = 2
text = "DAMAGE
============================="

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
modulate = Color(1.5, 1.5, 1.5, 1)
layout_mode = 2
placeholder_text = "DAMAGE DICE"

[node name="RunButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
modulate = Color(1.5, 1.5, 1.5, 1)
layout_mode = 2
shortcut = SubResource("Shortcut_k3dni")
text = "> Run"
alignment = 0

[node name="LocationButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
modulate = Color(1.5, 1.5, 1.5, 1)
layout_mode = 2
text = "> Damage Location"
alignment = 0

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
modulate = Color(1.5, 1.5, 1.5, 1)
layout_mode = 2
shortcut = SubResource("Shortcut_pppw0")
text = "> Back"
alignment = 0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Log" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/RunButton" to="." method="_on_run_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/LocationButton" to="." method="_on_location_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
